--- a/httdocs/index.html
+++ b/httdocs/index.html
@@ -3,134 +3,134 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width" />
-  <title>クイックコピーボード</title>
+  <title>CODE SHOP</title>
   <link href="https://fonts.googleapis.com/earlyaccess/nicomoji.css" rel="stylesheet">
   <link rel="stylesheet" href="/httdocs/common/css/style.css" />
 </head>
 <body>
-  <h1>クイックコピーボード</h1>
-  <div class="wrapper">
-   <div class="boxM posMain">
-    <div>
-      <p>・検索ワードを入力して下さい。</p>
+  <!--全体-->
+  <div id="container">
+    <div class="header_section">
+      <div class="header_box">
+        <div><h1 class="header_title">CODE SHOP</h1></div>
+        <div class="search_box">
+          <div class="search_input_area">
+            <input type="text" class="search_input_text" placeholder="例）ハンバーガーメニュー">
+          </div>
+          <div class="search_btn_area">
+            <button class="search_btn">検索
+              <img class="search_image" src="/httdocs/common/img/mushi.png">
+            </button>
+          </div>
+        </div>
+        <div class="search_section">
+          <div class="search_textBox">
+            <p class="search_text">商用利用OK</p>
+          </div>
+          <div class="search_textBox">
+            <p class="search_text">カスタマイズフリー</p>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="inputBox posLeft">
-     <form method="post">
-      <input type="text" id="hit"></input>
-     </form>
-     <label class="selectbox-2">
-      <select name="category" id="cate">
-       <option value="">選択</option>
-       <option value="work">仕事</option>
-       <option value="hoby">趣味</option>
-       <option value="study">学び</option>
-       <option value="coding">コーディング</option>
-      </select>
-     </label>
-     <div class="btnBox">
-      <button id="search">検索</button>
-      <button id="show-all" class="showBtn">全て表示</button>
-      <button id="clear-all" class="showBtn">全件削除</button>
-     </div>
-    </div>
-   </div>
-   <div class="boxM topM">
-    <div>
-      <p>・登録したいワードを入力し、<br>&nbsp;&nbsp;&nbsp;カテゴリーを選択して<br>&nbsp;&nbsp;&nbsp;保存ボタンを押して下さい。</p>
-    </div>
-    <div class="inputBox posLeft">
-      <form method="post">
-        <input type="text" id="text"></input>
-      </form>
-      <label class="selectbox-2">
-        <select name="category" id="cate2">
-         <option value="">選択</option>
-         <option value="work">仕事</option>
-         <option value="hoby">趣味</option>
-         <option value="study">学び</option>
-         <option value="coding">コーディング</option>
-        </select>
-      </label>
-      <button id="click" value="saved">保存</button>
-    </div>
-    <div class="bottomS">
-     <label class="selectbox-2">
-      <select name="date" id="dateSort">
-       <option value="">並び替え</option>
-       <option value="desc">登録日が新しい順</option>
-       <option value="asc">登録日が古い順</option>
-       <option value="desc-u">更新日が新しい順</option>
-       <option value="asc-u">更新日が古い順</option>
-       <option value="asc-f">お気に入り順</option>
-      </select>
-     </label>
-    </div>
-   </div>
+    <div id="side_section">
+      <div class="side_box">
+        <ul class="side_list">
+          <li><span class="side_icon">■</span>カテゴリー
+            <ul class="side_list_category">
+                <li><div class="side_list_round">ボタン</div></li>
+                <li><div class="side_list_round">ホバー</div></li>
+                <li><div class="side_list_round">モーダル</div></li>
+                <li><div class="side_list_round">モーダルメニュー</div></li>
+                <li><div class="side_list_round">アコーディオン</div></li>
+              </ul>
+            </li>
+            <li><span class="side_icon">■</span>タグ
+              <ul class="side_list_tag">
+                <li><div class="side_list_line">＃ネオン</div></li>
+                <li><div class="side_list_line">＃シンプル</div></li>
+                <li><div class="side_list_line">＃ポップ</div></li>
+                <li><div class="side_list_line">＃おしゃれ</div></li>
+                <li><div class="side_list_line">＃まるみ</div></li>
+              </ul>
+            </li>
+            <li><div><span class="side_icon">■</span><span>利用規約</span>をご確認ください。</div></li>
+            <li><div><span class="side_icon">■</span>お問い合わせは<span>こちら。</span></div></li>
+          </ul>
+        </div>
+      </div>
+      <div id="wrapper">
+        <div>
+          <div></div>
+        </div>
+        <div>
+          <div></div>
+        </div>
+      </div>
   </div>
   <div id="container"></div>
 
-<!-- TEST FireBase -->
-  <div>
+  <!-- TEST FireBase -->
+  <!-- <div>
     <div>テスト：<input type="text" id="js-title"></div>
     <div>
       <textarea name="f-html" id="js-html"></textarea>
       <button id="send">送信</button>
     </div>
     <div id="output" style="overflow: auto;height: 300px;"></div>
-  </div>
-  <script src="script.js"></script>
+  </div> -->
+  <script src="/httdocs/common/js/script.js"></script>
 
 <!-- FireBase(サーバーサイドの処理) -->
 <script type="module">
-  // Import the functions you need from the SDKs you need
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.7.0/firebase-app.js";
-  import { getDatabase, ref, push, set, onChildAdded, remove, onChildRemoved }
-  from "https://www.gstatic.com/firebasejs/12.7.0/firebase-database.js";
-  // TODO: Add SDKs for Firebase products that you want to use
-  // https://firebase.google.com/docs/web/setup#available-libraries
+//   // Import the functions you need from the SDKs you need
+//   import { initializeApp } from "https://www.gstatic.com/firebasejs/12.7.0/firebase-app.js";
+//   import { getDatabase, ref, push, set, onChildAdded, remove, onChildRemoved }
+//   from "https://www.gstatic.com/firebasejs/12.7.0/firebase-database.js";
+//   // TODO: Add SDKs for Firebase products that you want to use
+//   // https://firebase.google.com/docs/web/setup#available-libraries
 
-  // Your web app's Firebase configuration
-  const firebaseConfig = {
-    apiKey: "AIzaSyDAIMUKQm6Qv7wVh35GrA4pJwk9aYLz5dY",
-    authDomain: "snippetapp-a3018.firebaseapp.com",
-    projectId: "snippetapp-a3018",
-    storageBucket: "snippetapp-a3018.firebasestorage.app",
-    messagingSenderId: "670984465748",
-    appId: "1:670984465748:web:01be39a4b0a9d376feacc1"
-  };
+//   // Your web app's Firebase configuration
+//   const firebaseConfig = {
+//     apiKey: "AIzaSyDAIMUKQm6Qv7wVh35GrA4pJwk9aYLz5dY",
+//     authDomain: "snippetapp-a3018.firebaseapp.com",
+//     projectId: "snippetapp-a3018",
+//     storageBucket: "snippetapp-a3018.firebasestorage.app",
+//     messagingSenderId: "670984465748",
+//     appId: "1:670984465748:web:01be39a4b0a9d376feacc1"
+//   };
 
-  // Initialize Firebase
-  const app = initializeApp(firebaseConfig);
-  //データベース接続
-  const db = getDatabase(app);
-  //データを登録する階層を指定する
-  const dbRef = ref(db, "code/d_html");
+//   // Initialize Firebase
+//   const app = initializeApp(firebaseConfig);
+//   //データベース接続
+//   const db = getDatabase(app);
+//   //データを登録する階層を指定する
+//   const dbRef = ref(db, "code/d_html");
 
-  //データの送信機能
-  const inBtn = document.getElementById('send');
-  inBtn.addEventListener('click', function () {
-  const title = document.getElementById('js-title');
-  const cHtml = document.getElementById('js-html');
-  ///入力値をオブジェクト変数にセット
-  const msg = {
-    oTitle: title.value,
-    oCHtml: cHtml.value
-  }
-
-  //テーブルに登録
-  //1:ユニークキーを登録
-  //2:テーブルに登録したい各フィールド登録する
-  const newPostRef = push(dbRef);
-  set(newPostRef, msg);
-  console.log(newPostRef);
-});
-  //データを画面に表示
-  onChildAdded(dbRef, function (data){
-    const msg = data.val();
-    const outText = document.getElementById('output');
-    outText.innerHTML = `<p>タイトルは、${msg.oTitle} で、<br> コードは、${msg.oCHtml} を登録しました。</p>`;
-    console.log(outText.textContent);
-  });
+//   //データの送信機能
+//   const inBtn = document.getElementById('send');
+//   inBtn.addEventListener('click', function () {
+//   const title = document.getElementById('js-title');
+//   const cHtml = document.getElementById('js-html');
+//   ///入力値をオブジェクト変数にセット
+//   const msg = {
+//     oTitle: title.value,
+//     oCHtml: cHtml.value
+//   }
+//   //テーブルに登録
+//   //1:ユニークキーを登録
+//   //2:テーブルに登録したい各フィールド登録する
+//   const newPostRef = push(dbRef);
+//   set(newPostRef, msg);
+//   console.log(newPostRef);
+// });
+//   //データを画面に表示
+//   onChildAdded(dbRef, function (data){
+//     const msg = data.val();
+//     const outText = document.getElementById('output');
+//     outText.innerHTML = `<p>タイトルは、${msg.oTitle} で、<br> コードは、${msg.oCHtml} を登録しました。</p>`;
+//     console.log(outText.textContent);
+//   });
 
 </script>
 
