ヘッダー_スマホ用のアイコン作成着手

--- a/httdocs/index.html
+++ b/httdocs/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width" />
   <title>CODE SHOP</title>
   <link href="https://fonts.googleapis.com/earlyaccess/nicomoji.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/destyle.css@1.0.15/destyle.css"/>
   <link rel="stylesheet" href="/httdocs/common/css/style.css" />
 </head>
 <body>
@@ -32,41 +33,48 @@
           </div>
         </div>
       </div>
+      <div id="ham_box">
+        <span class="line_top"></span>
+        <span class="line_center"></span>
+        <span class="line_bottom"></span>
+      </div>
     </div>
-    <div id="side_section">
-      <div class="side_box">
-        <ul class="side_list">
-          <li><span class="side_icon">■</span>カテゴリー
-            <ul class="side_list_category">
-                <li><div class="side_list_round">ボタン</div></li>
-                <li><div class="side_list_round">ホバー</div></li>
-                <li><div class="side_list_round">モーダル</div></li>
-                <li><div class="side_list_round">モーダルメニュー</div></li>
-                <li><div class="side_list_round">アコーディオン</div></li>
-              </ul>
-            </li>
-            <li><span class="side_icon">■</span>タグ
-              <ul class="side_list_tag">
-                <li><div class="side_list_line">＃ネオン</div></li>
-                <li><div class="side_list_line">＃シンプル</div></li>
-                <li><div class="side_list_line">＃ポップ</div></li>
-                <li><div class="side_list_line">＃おしゃれ</div></li>
-                <li><div class="side_list_line">＃まるみ</div></li>
-              </ul>
-            </li>
-            <li><div><span class="side_icon">■</span><span>利用規約</span>をご確認ください。</div></li>
-            <li><div><span class="side_icon">■</span>お問い合わせは<span>こちら。</span></div></li>
-          </ul>
+    <div id="main_container">
+      <div id="side_section">
+        <div class="side_box">
+          <ul class="side_list">
+            <li class="side_list_space"><span class="side_icon">■</span>カテゴリー
+              <ul class="side_list_category">
+                  <li><div class="side_list_round">ボタン</div></li>
+                  <li><div class="side_list_round">ホバー</div></li>
+                  <li><div class="side_list_round">モーダル</div></li>
+                  <li><div class="side_list_round">モーダルメニュー</div></li>
+                  <li><div class="side_list_round">アコーディオン</div></li>
+                </ul>
+              </li>
+              <li class="side_list_space"><span class="side_icon">■</span>タグ
+                <ul class="side_list_tag">
+                  <li><div class="side_list_line">＃ネオン</div></li>
+                  <li><div class="side_list_line">＃シンプル</div></li>
+                  <li><div class="side_list_line">＃ポップ</div></li>
+                  <li><div class="side_list_line">＃おしゃれ</div></li>
+                  <li><div class="side_list_line">＃まるみ</div></li>
+                </ul>
+              </li>
+              <li class="side_list_space"><div><span class="side_icon">■</span><span>利用規約</span>をご確認ください。</div></li>
+              <li class="side_list_space"><div><span class="side_icon">■</span>お問い合わせは<span>こちら。</span></div></li>
+            </ul>
         </div>
       </div>
-      <div id="wrapper">
+    </div>
+    <div id="wrapper">
         <div>
           <div></div>
         </div>
         <div>
           <div></div>
         </div>
-      </div>
+    </div>
   </div>
   <div id="container"></div>
 
