サイドメニューの非表示・レスポンシブの文字サイズを設定

--- a/httdocs/index.html
+++ b/httdocs/index.html
@@ -61,8 +61,8 @@
                   <li><div class="side_list_line">＃まるみ</div></li>
                 </ul>
               </li>
-              <li class="side_list_space"><div><span class="side_icon">■</span><span>利用規約</span>をご確認ください。</div></li>
-              <li class="side_list_space"><div><span class="side_icon">■</span>お問い合わせは<span>こちら。</span></div></li>
+              <li class="side_list_space"><div><span class="side_icon">■</span><span class="side_list_line">利用規約</span>をご確認ください。</div></li>
+              <li class="side_list_space"><div><span class="side_icon">■</span>お問い合わせは<span class="side_list_line">こちら。</span></div></li>
             </ul>
         </div>
       </div>
