画像追加・メイン_カテゴリー部分作成

--- a/httdocs/index.html
+++ b/httdocs/index.html
@@ -66,14 +66,49 @@
             </ul>
         </div>
       </div>
+      <!-- メイン画面 -->
+      <!-- カテゴリーの表示 -->
+      <div class="category_box">
+        <div class="category_imageBox">
+          <img src="./common/img/cate_img1.png" alt="" class="category_img">
+          <div class="category_text">
+            <p class="category_name">ボタン</p>
+          </div>
+        </div>
+        <div class="category_imageBox">
+          <img src="./common/img/cate_img2.png" alt="" class="category_img">
+          <div class="category_text">
+            <p class="category_name">ホバー</p>
+          </div>
+        </div>
+        <div class="category_imageBox">
+          <img src="./common/img/cate_img3.png" alt="" class="category_img">
+          <div class="category_text">
+            <p class="category_name">モーダル</p>
+          </div>
+        </div>
+        <div class="category_imageBox">
+          <img src="./common/img/cate_img4.png" alt="" class="category_img">
+          <div class="category_text">
+            <p class="category_name">メニュー</p>
+          </div>
+        </div>
+        <div class="category_imageBox">
+          <img src="./common/img/cate_img5.png" alt="" class="category_img">
+          <div class="category_text">
+            <p class="category_name">アコーディオン</p>
+          </div>
+        </div>
+        <div class="category_imageBox">
+          <img src="./common/img/cate_comming.png" alt="" class="category_img">
+        </div>
+      </div>
+      <!-- コード表示 -->
+      <div>
+        <div></div>
+      </div>
     </div>
-    <div id="wrapper">
-        <div>
-          <div></div>
-        </div>
-        <div>
-          <div></div>
-        </div>
+    <div id="wrapper" class="main-section">
     </div>
   </div>
   <div id="container"></div>
