メイン画面の見た目

--- a/httdocs/index.html
+++ b/httdocs/index.html
@@ -66,46 +66,103 @@
             </ul>
         </div>
       </div>
-      <!-- メイン画面 -->
-      <!-- カテゴリーの表示 -->
-      <div class="category_box">
-        <div class="category_imageBox">
-          <img src="./common/img/cate_img1.png" alt="" class="category_img">
-          <div class="category_text">
-            <p class="category_name">ボタン</p>
+      <div id="main-section">
+        <!-- メイン画面 -->
+        <!-- カテゴリーの表示 -->
+        <div class="category_box">
+          <div class="category_imageBox">
+            <div class="category_image">
+              <img src="./common/img/cate_img1.png" alt="" class="category_img">
+            </div>
+            <div class="category_text">
+              <p class="category_name">ボタン</p>
+            </div>
+          </div>
+          <div class="category_imageBox">
+            <div class="category_image">
+              <img src="./common/img/cate_img2.png" alt="" class="category_img">
+            </div>
+            <div class="category_text">
+              <p class="category_name">ホバー</p>
+            </div>
+          </div>
+          <div class="category_imageBox">
+            <div class="category_image">
+              <img src="./common/img/cate_img3.png" alt="" class="category_img">
+            </div>
+            <div class="category_text">
+              <p class="category_name">モーダル</p>
+            </div>
+          </div>
+          <div class="category_imageBox">
+            <div class="category_image">
+              <img src="./common/img/cate_img4.png" alt="" class="category_img">
+            </div>
+            <div class="category_text">
+              <p class="category_name">メニュー</p>
+            </div>
+          </div>
+          <div class="category_imageBox">
+            <div class="category_image">
+              <img src="./common/img/cate_img5.png" alt="" class="category_img">
+            </div>
+            <div class="category_text">
+              <p class="category_name">アコーディオン</p>
+            </div>
+          </div>
+          <div class="category_imageBox">
+            <img src="./common/img/cate_comming.png" alt="" class="category_img">
           </div>
         </div>
-        <div class="category_imageBox">
-          <img src="./common/img/cate_img2.png" alt="" class="category_img">
-          <div class="category_text">
-            <p class="category_name">ホバー</p>
+        <!-- コード表示 -->
+        <div id="result-box">
+          <div class="result-textBox">
+            <p id="result-text">コード一覧</p>
+          </div>
+          <div>
+            <div>
+              <h2>サンプル</h2>
+            </div>
+            <div>
+              <button type="submit" name="demo">デモ版</button>
+            <div>
+              <button>プレビュー</button>
+            </div>
+          </div>
+          <div>
+            <div>
+              <h2>サンプル</h2>
+            </div>
+            <div>
+              <button type="button">デモ版</button>
+            </div>
+            <div>
+              <button>プレビュー</button>
+            </div>
+          </div>
+          <div>
+            <div>
+              <h2>サンプル</h2>
+            </div>
+            <div>
+              <button type="button">デモ版</button>
+            </div>
+            <div>
+              <button>プレビュー</button>
+            </div>
+          </div>
+          <div>
+            <div>
+              <h2>サンプル</h2>
+            </div>
+            <div>
+              <button type="button">デモ版</button>
+            </div>
+            <div>
+              <button>プレビュー</button>
+            </div>
           </div>
         </div>
-        <div class="category_imageBox">
-          <img src="./common/img/cate_img3.png" alt="" class="category_img">
-          <div class="category_text">
-            <p class="category_name">モーダル</p>
-          </div>
-        </div>
-        <div class="category_imageBox">
-          <img src="./common/img/cate_img4.png" alt="" class="category_img">
-          <div class="category_text">
-            <p class="category_name">メニュー</p>
-          </div>
-        </div>
-        <div class="category_imageBox">
-          <img src="./common/img/cate_img5.png" alt="" class="category_img">
-          <div class="category_text">
-            <p class="category_name">アコーディオン</p>
-          </div>
-        </div>
-        <div class="category_imageBox">
-          <img src="./common/img/cate_comming.png" alt="" class="category_img">
-        </div>
-      </div>
-      <!-- コード表示 -->
-      <div>
-        <div></div>
       </div>
     </div>
     <div id="wrapper" class="main-section">
