メイン画面の初期表示・ボタンのリンクを追加

--- a/httdocs/index.html
+++ b/httdocs/index.html
@@ -45,24 +45,24 @@
           <ul class="side_list">
             <li class="side_list_space"><span class="side_icon">■</span>カテゴリー
               <ul class="side_list_category">
-                  <li><div class="side_list_round">ボタン</div></li>
-                  <li><div class="side_list_round">ホバー</div></li>
-                  <li><div class="side_list_round">モーダル</div></li>
-                  <li><div class="side_list_round">モーダルメニュー</div></li>
-                  <li><div class="side_list_round">アコーディオン</div></li>
+                  <li><div class="side_list_round"><a href="#">ボタン</a></div></li>
+                  <li><div class="side_list_round"><a href="#">ホバー</a></div></li>
+                  <li><div class="side_list_round"><a href="#">モーダル</a></div></li>
+                  <li><div class="side_list_round"><a href="#">モーダルメニュー</a></div></li>
+                  <li><div class="side_list_round"><a href="">アコーディオン</a></div></li>
                 </ul>
               </li>
               <li class="side_list_space"><span class="side_icon">■</span>タグ
                 <ul class="side_list_tag">
-                  <li><div class="side_list_line">＃ネオン</div></li>
-                  <li><div class="side_list_line">＃シンプル</div></li>
-                  <li><div class="side_list_line">＃ポップ</div></li>
-                  <li><div class="side_list_line">＃おしゃれ</div></li>
-                  <li><div class="side_list_line">＃まるみ</div></li>
+                  <li><div class="side_list_line"><a href="#">＃ネオン</a></div></li>
+                  <li><div class="side_list_line"><a href="#">＃シンプル</a></div></li>
+                  <li><div class="side_list_line"><a href="#">＃ポップ</a></div></li>
+                  <li><div class="side_list_line"><a href="#">＃おしゃれ</a></div></li>
+                  <li><div class="side_list_line"><a href="#">＃まるみ</a></div></li>
                 </ul>
               </li>
-              <li class="side_list_space"><div><span class="side_icon">■</span><span class="side_list_line">利用規約</span>をご確認ください。</div></li>
-              <li class="side_list_space"><div><span class="side_icon">■</span>お問い合わせは<span class="side_list_line">こちら。</span></div></li>
+              <li class="side_list_space"><div><span class="side_icon">■</span><span class="side_list_line"><a href="#">利用規約</a></span>をご確認ください。</div></li>
+              <li class="side_list_space"><div><span class="side_icon">■</span>お問い合わせは<span class="side_list_line"><a href="#">こちら。</a></span></div></li>
             </ul>
         </div>
       </div>
@@ -119,48 +119,50 @@
           <div class="result-textBox">
             <p id="result-text">コード一覧</p>
           </div>
-          <div>
-            <div>
-              <h2>サンプル</h2>
+          <div class="result-card">
+            <div class="result-titleBox">
+              <h2 class="result-title"><span class="result-num">1</span>サンプル</h2>
             </div>
-            <div>
-              <button type="submit" name="demo">デモ版</button>
-            <div>
-              <button>プレビュー</button>
+            <div class="result-demoCard">
+              <button class="demo-btn">デモ版</button>
             </div>
-          </div>
-          <div>
-            <div>
-              <h2>サンプル</h2>
-            </div>
-            <div>
-              <button type="button">デモ版</button>
-            </div>
-            <div>
-              <button>プレビュー</button>
+            <div class="result-btnBox">
+              <button class="prv-btn">プレビュー</button>
             </div>
           </div>
-          <div>
-            <div>
-              <h2>サンプル</h2>
+          <div class="result-card">
+            <div class="result-titleBox">
+              <h2 class="result-title"><span class="result-num">1</span>サンプル</h2>
             </div>
-            <div>
-              <button type="button">デモ版</button>
+            <div class="result-demoCard">
+              <button class="demo-btn">デモ版</button>
             </div>
-            <div>
-              <button>プレビュー</button>
+            <div class="result-btnBox">
+              <button class="prv-btn">プレビュー</button>
             </div>
           </div>
-          <div>
-            <div>
-              <h2>サンプル</h2>
+          <div class="result-card">
+            <div class="result-titleBox">
+              <h2 class="result-title"><span class="result-num">1</span>サンプル</h2>
             </div>
-            <div>
-              <button type="button">デモ版</button>
+            <div class="result-demoCard">
+              <button class="demo-btn">デモ版</button>
             </div>
-            <div>
-              <button>プレビュー</button>
+            <div class="result-btnBox">
+              <button class="prv-btn">プレビュー</button>
             </div>
+          </div>
+          <div class="result-card">
+            <div class="result-titleBox">
+              <h2 class="result-title"><span class="result-num">1</span>サンプル</h2>
+            </div>
+            <div class="result-demoCard">
+              <button class="demo-btn">デモ版</button>
+            </div>
+            <div class="result-btnBox">
+              <button class="prv-btn">プレビュー</button>
+            </div>
+          </div>
           </div>
         </div>
       </div>
