コメント修正

--- a/httdocs/index.html
+++ b/httdocs/index.html
@@ -114,7 +114,7 @@
             <img src="./common/img/cate_comming.png" alt="" class="category_img">
           </div>
         </div>
-        <!-- コード表示 -->
+        <!-- コード一覧 -->
         <div id="result-box">
           <div class="result-textBox">
             <p id="result-text">コード一覧</p>
