PCレスポンシブ途中_可変ができない

--- a/httdocs/index.html
+++ b/httdocs/index.html
@@ -67,7 +67,6 @@
         </div>
       </div>
       <div id="main-section">
-        <!-- メイン画面 -->
         <!-- カテゴリーの表示 -->
         <div class="category_box">
           <div class="category_imageBox">
@@ -114,11 +113,12 @@
             <img src="./common/img/cate_comming.png" alt="" class="category_img">
           </div>
         </div>
-        <!-- コード一覧 -->
+        <!-- 販売コード一覧 -->
         <div id="result-box">
           <div class="result-textBox">
             <p id="result-text">コード一覧</p>
           </div>
+         <div class="result-cardBox">
           <div class="result-card">
             <div class="result-titleBox">
               <h2 class="result-title"><span class="result-num">1</span>サンプル</h2>
@@ -163,6 +163,7 @@
               <button class="prv-btn">プレビュー</button>
             </div>
           </div>
+        </div>
           </div>
         </div>
       </div>
